# CLoPA

./: .gitignore  README.md  pyproject.toml  setup.py
.github/ISSUE_TEMPLATE/: BUG-REPORT-FORM.yml  FEATURE-ISSUE-FORM.yml  TASK-ISSUE-FORM.yml
clopa/: app.py  translation.py
clopa/adaptation/: adaptation_executor.py  adaptation_planning.py  adaptation_trigger_criteria.py  data_handling.py  io_operations.py
clopa/adaptation/training_utils/: build_simple_heuristic.py  dataloading_augs.py  input_encoding.py  loss_configs.py  metric_configs.py  network_configs.py  optimisation_configs.py  performance_tracking.py  trainer.py
clopa/adaptation/training_utils/prompters/: basic_mixture_registry.py  heuristic_registry.py  utils.py
clopa/inference_sessions/: adapted_inference_session.py  pretrained_inference_session.py
docker_build/: requirements.txt
nnInteractive/adaptation/: adaptation_config_registry.txt  adaptation_executor.py  adaptation_planning.py  adaptation_trigger_criteria.py  data_handling.py  io_operations.py
nnInteractive/adaptation/training_utils/: build_complex_heuristic.py  build_simple_heuristic.py  dataloading_augs.py  general_utils.py  input_encoding.py  loss_configs.py  metric_configs.py  network_configs.py  network_utils.py  optimisation_configs.py  saving_utils.py  trainer.py
nnInteractive/adaptation/training_utils/prompters/: basic_mixture_registry.py  complex_mixture_registry.py  heuristic_registry.py  point.py
nnInteractive/inference/: adapted_inference_session.py  pretrained_inference_session.py
src_validate/build_app/: infer_app.py
